@@ -1,0 +1,5 @@
+
+default:
+
+clean:
+	rm -f *.eps *~
